<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0px"
    android:paddingRight="0px"
    android:paddingStart="0px"
    android:paddingEnd="0px"
    tools:context=".Controller.BonusCardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="58dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.333"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/familycard"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-thin"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/fc"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.333"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/teilhabe"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-thin" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/th"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.333"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/bonuscard"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-thin"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/bc"/>

            </LinearLayout>

        </LinearLayout>

        <fragment android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            class="com.google.android.gms.maps.SupportMapFragment">
        </fragment>

        <ListView
            android:id="@+id/bonuscardLV"
            style="@style/ListViewStyle" />
    </LinearLayout>
</FrameLayout>